--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,28 @@
 body {
   background-color: rgb(226, 234, 228);
 }
+
+.logo {
+  height: 180px;
+  width: 180px;
+}
+
+#toast-container {
+  margin-top: 1rem;
+}
+
+#toast-container.toast-top-full-width > .toast {
+  max-width: 570px;
+}
+
+#toast-container > .toast-success {
+  background-color: #35c8c3;
+  opacity: 1;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+#toast-container > .toast-success:hover {
+  background-color: #35c8c3;
+  opacity: 1;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+}
